--- a/RecipeBook/appsettings.json
+++ b/RecipeBook/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RecipeDB": "Data source={AppDir}/RecipeBooks.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
